@startuml collider

' namespace Collider {
'     handleSelf : 
'     handleBoth
' }

class Collider {
    match: function
    handle()
    handleSelf()
    handleBoth()
}


class SimpleCollider {
}

class SuperCollider {
    collider: Collider
}

class EatingColliderBallBall {

}

class EatingColliderPlayerVirus {

}


class EatingColliderPlayerFood {

}

class EatingColliderBallFood {

}

class EatingColliderBallVirus {

}

class CombiningColliderBallBall {

}


class EatingColliderPlayerPlayer {
    collider: EatingColliderBallBall

}


Collider <-- SuperCollider
Collider <-- SimpleCollider

SimpleCollider <-- EatingColliderBallBall
SimpleCollider  <-- CombiningColliderBallBall
SuperCollider <-- EatingColliderPlayerPlayer
' EatingColliderPlayerPlayer *-- EatingColliderBallBall
SuperCollider <-- EatingColliderPlayerVirus
SuperCollider <-- EatingColliderPlayerFood
' EatingColliderPlayerVirus *-- EatingColliderBallVirus
' EatingColliderPlayerFood *-- EatingColliderBallFood
EatingColliderBallVirus <-- SimpleCollider
EatingColliderBallFood  <-- SimpleCollider

@enduml